# climattr

./: .gitignore  README.md  pyproject.toml
climattr/: __init__.py  attribution.py  cli.py  correction.py  exploratory.py  filter.py  impacts.py  indice.py  main.py  spatial.py  utils.py  validation.py  validator.py
climattr/cli/: main.py  methods.py  parsers.py
notebooks/: AttributionCLIExample.ipynb  AttributionPackageExample.ipynb  ImpactPackageExample.ipynb
tests/: test_attribution.py  test_correction.py  test_exploratory.py  test_filter.py  test_indice.py  test_spatial.py  test_utils.py  test_validation.py  test_validator.py
tests/attribution/: test_bootstrap.py  test_bootstrap_ci.py  test_metrics.py  test_pr_calculation.py  test_rp_plot.py
