[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climattr"
version = "0.1.0"
description = "Package with a toolbox for extreme event climate attribution"
authors = [
  {name = "Rafael Abreu", email = "rafael.cesario.abreu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
  "cartopy==0.23.0",
  "dask==2024.8.0",
  "geopandas==1.0.1",
  "matplotlib==3.9.2",
  "netcdf4==1.7.1.post2",
  "numpy==2.0.1",
  "pandas==2.2.2",
  "salem==0.3.11",
  "scipy==1.14.0",
  "xarray==2024.7.0",
  "xclim==0.52.0"
]

[project.scripts]
climattr = "climattr.cli.main:main"

[tool.setuptools]
packages = ["climattr"]

[tool.setuptools.package-dir]
climattr = "climattr"